[package]
name = "x11-make-a-fish"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { path = "../../lambda-http" }
lambda_runtime = { path = "../../lambda-runtime" }
reqwest = { version = "0.12.8", features = ["blocking"] }
serde = "1.0.136"
tokio = { version = "1", features = ["macros"] }
x11rb = { version = "0.13.1", features = ["image"] }
openssl = { version = "0.10.68", features = ["vendored"] }
fish-oxide = "0.2.1"

[dev-dependencies]
tokio-test = "0.4.2"
